add_subdirectory (armTriggers)
add_subdirectory (bc)
add_subdirectory (bd)
add_subdirectory (SiBT)
add_subdirectory (SiProf)
add_subdirectory (SiMD)
add_subdirectory (FD)
add_subdirectory (mwpc)
add_subdirectory (silicon)
#add_subdirectory (ssd)
add_subdirectory (sts)
add_subdirectory (gem)
add_subdirectory (dch)
add_subdirectory (csc)
add_subdirectory (tof1)
#add_subdirectory (tof701)
add_subdirectory (tof)
add_subdirectory (ecal)
add_subdirectory (zdc)
add_subdirectory (scwall)
add_subdirectory (hodo)
add_subdirectory (fhcal)
add_subdirectory (ndet)
add_subdirectory (vsp)
add_subdirectory (vacwall)
add_subdirectory (common)
