add_subdirectory(run)
#add_subdirectory(src/srcAnalysis)

INSTALL(DIRECTORY ./ DESTINATION ${CMAKE_INSTALL_PREFIX}/macro
	PATTERN "./profiling" EXCLUDE
	PATTERN "./CMakeLists.txt" EXCLUDE
	PATTERN "./raw/*.root" EXCLUDE
)

INSTALL(DIRECTORY ../config DESTINATION ${CMAKE_INSTALL_PREFIX})
INSTALL(DIRECTORY ../gconfig DESTINATION ${CMAKE_INSTALL_PREFIX})
INSTALL(DIRECTORY ../geometry DESTINATION ${CMAKE_INSTALL_PREFIX})
INSTALL(DIRECTORY ../input DESTINATION ${CMAKE_INSTALL_PREFIX})
INSTALL(DIRECTORY ../parameters DESTINATION ${CMAKE_INSTALL_PREFIX})

#INSTALL(FILES ${CMAKE_BINARY_DIR}/check_system.sh DESTINATION ${CMAKE_INSTALL_PREFIX})
#INSTALL(FILES ${CMAKE_BINARY_DIR}/install_config.sh DESTINATION ${CMAKE_INSTALL_PREFIX} RENAME bmnroot_config.sh)
#INSTALL(FILES ${CMAKE_BINARY_DIR}/BmnRootVersion.h DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
